--- a/code/010_MA_exposure.Rmd
+++ b/code/010_MA_exposure.Rmd
@@ -275,34 +275,75 @@ plot(influence(res), cex=0.8, las=1)
 ```
 
 
-```{r - forest & funnel}
+```{r - forest}
 ### forest plot --------------------------------------------------------------------------
 # forest(res)
 # forest(res, addpred=TRUE, header=TRUE)
 # print(forest(res, addpred=TRUE, header=TRUE))
 xlim_custmize = c(-1,1)
-# forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize)
-# forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp)
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp, at=log(c(.6, .8, 1, 1.2, 1.5)))
+
+png(file=paste0('./figures/', 'plot_forest.png'), 
+    # width = 3.5, height = 4, units = 'in', 
+    width = 1000, height = 1000, units = "px", pointsize = 22,
+    # res = 200
+    ) 
+forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = paste(dat$id, dat$model_id, sep = '_'))
+dev.off() 
+
+forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp)
+forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp, at=log(c(.6, .8, 1, 1.2, 1.4)))
+```
 
 
 
+  Given our assumptions, and in the case when there is no publication bias, all studies would lie symmetrically around our pooled effect size (the vertical line in the middle), within the form of the funnel. 
+  
+  When *publication bias* is present, we would assume that the funnel would look asymmetrical, because only the small studies with a large effect size very published, while small studies without a significant, large effect would be missing.
+  
+  We can see in the plot that while some studies have statistically significant effect sizes (the gray areas), others do not (white background). 
+  (Link)[https://cjvanlissa.github.io/Doing-Meta-Analysis-in-R/smallstudyeffects.html]
+  
+```{r - funnel}
 ### funnel plot --------------------------------------------------------------------------
 # funnel(res)
 # funnel(res, ylim=c(0,.08), las=1)
-funnel(res, ylim=c(0,.08), las=1, digits=list(2L,2))
+funnel(res, ylim=c(0,.08), las=1, digits=list(2L,2), legend=TRUE)
+
+## trim and fill method
+funnel(trimfill(res), # , side = 'left'
+       las=1, ylim=c(0,.08), digits=list(2L,2), 
+       # cex=1.2,
+       legend=TRUE)
+
+# res
+# trimfill(res)
+
+## contour-enhanced funnel plot
+# funnel(dat$yi, dat$vi, yaxis="seinv", ## "seinv" for the inverse of the standard errors
+#        # xlim=c(-.5, .5),
+#        # ylim=c(10, 200), 
+#        xaxs="i", yaxs="i", las=1, 
+#        level=c(.10, .05, .01), 
+#        shade=c("white", "gray55", "gray85"), ## pink -- not significant 
+#        legend=TRUE, 
+#        # back="grey90",
+#        hlines=NULL, ylab="Precision (1/se)")
 
 
-# contour-enhanced funnel plot
-funnel(dat$yi, dat$vi, yaxis="seinv",
-       # xlim=c(-.5, .5),
-       ylim=c(10, 200), 
-       xaxs="i", yaxs="i", las=1, 
-       level=c(.10, .05, .01), 
-       shade=c("pink", "gray55", "gray75"), ## pink -- not significant 
-       legend=TRUE, back="grey90", 
-       hlines=NULL, ylab="Precision (1/se)")
+png(file=paste0('./figures/', 'plot_funnel.png'), 
+    width = 1000, height = 1000, units = "px", pointsize = 22) 
+funnel(
+  # trimfill(res, side = 'right'),
+  res,
+  las=1, ylim=c(0,.08), digits=list(2L,2),
+  level=c(.10, .05, .01),
+  shade=c("white", "gray50", "gray65"), ## pink -- not significant
+  legend=TRUE,
+  back="grey90",
+  hlines=NULL)
+dev.off() 
 ```
+
 
 
 #### metacor
