--- a/code/001_mini-review.Rmd
+++ b/code/001_mini-review.Rmd
@@ -1011,6 +1011,72 @@ func_alluvial(data = dtt, indicator_n_min = 3, labele_small = 20, w_p = 10, file
 
 
 
+## Buffer
+
+```{r}
+f <- "./data/0301-MA-input/df_covidenceFull.rds"
+df <- readRDS(file = f)
+
+df_bf <- df %>%
+  dplyr::select(id, `Study ID`, starts_with('Buffer'))
+names(df_bf) <- c('id', 'Study_ID', 'buffer', 'buffer_unit')
+
+df_bf_ <- df_bf %>%
+  dplyr::filter(!is.na(buffer)) %>%
+  expand_col_to_long(data = ., target_col = "buffer") %>%
+  
+  ## fill NA in the unit column 
+  dplyr::mutate(
+    unit = case_when(
+      is.na(buffer_unit) ~ gsub("[^a-zA-Z]", "", buffer),
+      T ~ buffer_unit), 
+    
+    ## clean `unit` format
+    unit = gsub('Kilometers|\\(|\\)', '', unit),
+    unit = gsub('Meters', 'm', unit),
+    unit = trimws(unit),
+    
+    buf = gsub("[[:alpha:]]", "", buffer) %>%
+      as.numeric(.), 
+    
+    ## concert all values to meter
+    buf_m = case_when(
+      unit == 'km' ~ buf * 1000,
+      T ~ buf
+    )
+  
+  ) %>%
+  as.data.frame()
+
+unique(df_bf_$unit)
+n_paper <- length(unique(df_bf_$id))
+n_study <- nrow(df_bf_)
+
+p1 <- df_bf_ %>%
+  ggplot(aes(x = buf_m)) +
+  geom_histogram(binwidth = 500, color = "black", fill = "lightblue", alpha = 0.7) +
+  theme_classic() +
+  labs(title = paste0("Commonly used buffer size in ", n_paper, ' papers (', n_study, ' studies)'), 
+       x = "Buffer (m)", y = "Frequency")
+
+buf_m_upper <- 10000
+
+p2 <- df_bf_ %>%
+  dplyr::filter(buf_m <= buf_m_upper) %>%
+  ggplot(aes(x = buf_m)) +
+  geom_histogram(binwidth = 100, color = "black", fill = "lightblue", alpha = 0.7) +
+  scale_x_continuous(breaks = seq(0, buf_m_upper, 500)) + 
+  
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  labs(title = paste0('When narrowed down to the 0 - 10 km range ...'), 
+       x = "Buffer (m)", y = "Frequency")
+
+library(ggpubr)
+ggarrange(p1, p2, ncol = 1)
+
+```
+
 
 
 # SM
